--- a/docker-compose-prod-dist.yaml
+++ b/docker-compose-prod-dist.yaml
@@ -5,8 +5,10 @@ networks:
 services:
   traefik:
     image: "traefik:latest"
-    container_name: traefik
-    restart: always
+    deploy:
+      mode: global
+      restart_policy:
+        condition: any
     ports:
       - "80:80"     # Web
       - "443:443"   # HTTPS
@@ -36,6 +38,9 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
     networks:
       - swarm-network
+    deploy:
+      restart_policy:
+        condition: any
     labels:
       - traefik.enable=true
       - traefik.http.routers.provision.rule=Host(`provision.${DOMAIN_NAME}`)
