--- a/docker-compose-prod-dist.yaml
+++ b/docker-compose-prod-dist.yaml
@@ -4,7 +4,7 @@ networks:
 
 services:
   traefik:
-    image: "traefik:latest"
+    image: "traefik:v3.2.3"
     deploy:
       mode: global
       restart_policy:
@@ -47,6 +47,7 @@ services:
       - traefik.http.services.provision.loadbalancer.server.port=9000
       - traefik.http.routers.provision.tls=true
       - traefik.http.routers.provision.entrypoints=websecure
+      - traefik.http.routers.provision.tls.certresolver=mytlschallenge
 
 volumes:
   traefik_data:
