--- a/docker-compose-prod-mono.yaml
+++ b/docker-compose-prod-mono.yaml
@@ -4,7 +4,7 @@ networks:
 
 services:
   traefik:
-    image: "traefik:latest"
+    image: "traefik:v3.2.3"
     container_name: traefik
     restart: always
     ports:
