--- a/docker-compose-prod-dist.yaml
+++ b/docker-compose-prod-dist.yaml
@@ -28,6 +28,7 @@ services:
       - "--entrypoints.web.address=:80"
       - "--entrypoints.websecure.address=:443"
       - "--accesslog=true"
+      - "--log.level=DEBUG"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - traefik_data:/letsencrypt
